--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,7 +362,16 @@ body { background: var(--white); }
   transition: var(--transition);
   text-transform: capitalize;
 }
+.navbar-list {
+  display: flex;
+  flex-direction: column; /* This ensures vertical alignment */
+  align-items: center; /* Centers the menu items */
+}
 
+.navbar-list li {
+  width: 100%; /* Makes each menu item take full width */
+  text-align: center;
+}
 .navbar-link:is(:hover, :focus) { color: var(--bright-navy-blue); }
 
 .overlay {
